--- a/charts/incubator/pialert/values.yaml
+++ b/charts/incubator/pialert/values.yaml
@@ -126,7 +126,7 @@ initContainers:
         temp_config_file="/tc-pialert.conf"
         config_file="/home/pi/pialert/config/pialert.conf"
         echo "Copying config file into it's directory.."
-        cp -f "$temp_config_file" "$config_file" && echo "Copied config file successfully!" || echo "Failed to copy config file..."
+        cp "$temp_config_file" "$config_file" && echo "Copied config file successfully!" || echo "Failed to copy config file..."
         {{- if .Values.pialert.general.dark_mode }}
         echo "Enabling dark mode file..."
         touch "$dark_file" && echo "Created dark mode file!" || echo "Failed to create dark mode file..."
