--- a/charts/incubator/nitter/templates/common.yaml
+++ b/charts/incubator/nitter/templates/common.yaml
@@ -1,7 +1,7 @@
 {{/* Make sure all variables are set properly */}}
 {{- include "tc.common.loader.init" . }}
 
-{{- include "nitter.configmap" . -}}
+{{- include "nitter.secret" . -}}
 
 {{/* Render the templates */}}
 {{ include "tc.common.loader.apply" . }}
