--- a/charts/incubator/nitter/values.yaml
+++ b/charts/incubator/nitter/values.yaml
@@ -23,9 +23,9 @@ config:
 
 preferences:
   theme: "Nitter"
-  replaceTwitter: "nitter.net"
-  replaceYouTube: "piped.video"
-  replaceReddit: "teddit.net"
+  replaceTwitter: nitter.net
+  replaceYouTube: piped.video
+  replaceReddit: teddit.net
   replaceInstagram: ""
   proxyVideos: true
   hlsPlayback: false
