--- a/charts/incubator/nitter/values.yaml
+++ b/charts/incubator/nitter/values.yaml
@@ -22,7 +22,7 @@ config:
   tokenCount: 10
 
 preferences:
-  theme: "Nitter"
+  theme: Nitter
   replaceTwitter: nitter.net
   replaceYouTube: piped.video
   replaceReddit: teddit.net
