--- a/charts/incubator/nitter/values.yaml
+++ b/charts/incubator/nitter/values.yaml
@@ -4,32 +4,32 @@ image:
   tag: latest@sha256:dde49ae0122fe8da6d00432ec26e596efd36e81e0f14851df6ff40e1c656ddf7
 
 nitter:
-  title: nitter
-  hostname: localhost:{{ .Values.service.main.ports.main.port }}
-  httpMaxConnections: 100
+  general:
+    title: nitter
+    hostname: localhost:{{ .Values.service.main.ports.main.port }}
+    httpMaxConnections: 100
 
-cache:
-  listMinutes: 240
-  rssMinutes: 10
+  cache:
+    listMinutes: 240
+    rssMinutes: 10
 
-config:
-  hmacKey: ""
-  base64Media: false
-  enableRSS: true
-  enableDebug: false
-  proxy: ""
-  proxyAuth: ""
-  tokenCount: 10
+  config:
+    base64Media: false
+    enableRSS: true
+    enableDebug: false
+    proxy: ""
+    proxyAuth: ""
+    tokenCount: 10
 
-preferences:
-  theme: Nitter
-  replaceTwitter: nitter.net
-  replaceYouTube: piped.video
-  replaceReddit: teddit.net
-  replaceInstagram: ""
-  proxyVideos: true
-  hlsPlayback: false
-  infiniteScroll: false
+  preferences:
+    theme: Nitter
+    replaceTwitter: nitter.net
+    replaceYouTube: piped.video
+    replaceReddit: teddit.net
+    replaceInstagram: ""
+    proxyVideos: true
+    hlsPlayback: false
+    infiniteScroll: false
 
 service:
   main:
