--- a/charts/incubator/nitter/values.yaml
+++ b/charts/incubator/nitter/values.yaml
@@ -28,6 +28,17 @@ nitter:
     hlsPlayback: false
     infiniteScroll: false
 
+probes:
+  liveness:
+    type: HTTP
+    path: /
+  readiness:
+    type: HTTP
+    path: /
+  startup:
+    type: HTTP
+    path: /
+
 service:
   main:
     ports:
