--- a/charts/incubator/nitter/values.yaml
+++ b/charts/incubator/nitter/values.yaml
@@ -50,7 +50,7 @@ persistence:
   nitter-conf:
     enabled: true
     mountPath: /src/nitter.conf
-    type: configMap
+    type: secret
     objectName: '{{ template "tc.common.names.fullname" . }}-nitter-secret'
     subPath: nitter.conf
 
