change php-config to php

--- a/charts/stable/wordpress/questions.yaml
+++ b/charts/stable/wordpress/questions.yaml
@@ -102,7 +102,7 @@ questions:
                   type: string
                   private: true
                   default: ""
-  - variable: php-config
+  - variable: php
     group: App Configuration
     label: PHP Configuration
     schema:
