--- a/charts/stable/wordpress/values.yaml
+++ b/charts/stable/wordpress/values.yaml
@@ -25,7 +25,7 @@ smtp:
   user: ""
   pass: ""
 
-php-config:
+php:
   PHP_ENABLE_OPCACHE: "yes"
   PHP_EXPOSE_PHP: ""
   PHP_MAX_EXECUTION_TIME: ""
