--- a/charts/incubator/youtrack/Chart.yaml
+++ b/charts/incubator/youtrack/Chart.yaml
@@ -1,15 +1,17 @@
+---
 annotations:
   truecharts.org/SCALE-support: "true"
   truecharts.org/catagories: |
     - ProjectManagement
 apiVersion: v2
-appVersion: "latest"
+appVersion: latest
 dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
     version: 11.1.2
 deprecated: false
-description: "YouTrack is a project management tool that can be adapted to your processes to help you deliver great products."
+description: YouTrack is a project management tool that can be adapted to your
+  processes to help you deliver great products.
 home: https://truecharts.org/charts/incubator/youtrack
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/youtrack.png
 keywords:
