--- a/charts/incubator/terraria-tshock/Chart.yaml
+++ b/charts/incubator/terraria-tshock/Chart.yaml
@@ -1,7 +1,3 @@
-annotations:
-  truecharts.org/SCALE-support: "true"
-  truecharts.org/catagories: |
-    - GameServers
 apiVersion: v2
 appVersion: "tshock"
 dependencies:
@@ -9,8 +5,8 @@ dependencies:
     repository: https://library-charts.truecharts.org
     version: 11.1.2
 deprecated: false
-description: "This Chart will download and install Terraria and the TShock MOD and run it. SERVER PASSWORD: Chart"
-home: https://truecharts.org/charts/incubator/terraria-tshock
+description: SteamCMD Terraria and the TShock MOD.
+home: https://truecharts.org/charts/incubator/terraria-tshock.png
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/terraria-tshock.png
 keywords:
   - terraria-tshock
@@ -22,8 +18,13 @@ maintainers:
     url: https://truecharts.org
 name: terraria-tshock
 sources:
-  - https://github.com/truecharts/charts/tree/master/charts/incubator/terraria-tshock
+  - https://github.com/truecharts/charts/tree/master/charts/incubator/terraria-tshock.png
   - https://tshock.co/
   - https://hub.docker.com/r/ich777/terrariaserver
 type: application
-version: 2.0.8
+version: 2.0.9
+annotations:
+  truecharts.org/catagories: |
+    - GameServers
+  truecharts.org/SCALE-support: "true"
+  truecharts.org/grade: U
