fix(arksurvivalevolved) fix configmap

--- a/charts/incubator/arksurvivalevolved/questions.yaml
+++ b/charts/incubator/arksurvivalevolved/questions.yaml
@@ -126,7 +126,7 @@ questions:
                   default: ""
                   required: true
         - variable: easy_game_extra_params
-          label: Game Extra Parmeters (Easy)
+          label: Game Extra Parameters (Easy)
           description: Appends the game extra params to the Game Extra Parameters list
           schema:
             additional_attrs: true
