--- a/charts/incubator/youtrack/values.yaml
+++ b/charts/incubator/youtrack/values.yaml
@@ -3,7 +3,7 @@ image:
   repository: jetbrains/youtrack
   tag: 2022.2.55618
   pullPolicy: IfNotPresent
-volumeClaimTemplates:
+persistence:
   data:
     enabled: true
     mountPath: /opt/youtrack/data
