--- a/charts/incubator/youtrack/values.yaml
+++ b/charts/incubator/youtrack/values.yaml
@@ -16,6 +16,9 @@ persistence:
   backups:
     enabled: true
     mountPath: /opt/youtrack/backups
+  temp:
+    enabled: true
+    mountPath: /opt/youtrack/temp
 podSecurityContext:
   runAsGroup: 568
   runAsUser: 568
