--- a/charts/incubator/youtrack/values.yaml
+++ b/charts/incubator/youtrack/values.yaml
@@ -8,8 +8,9 @@ securityContext:
   runAsNonRoot: true
 
 podSecurityContext:
-  runAsGroup: 568
-  runAsUser: 568
+  runAsGroup: 13001
+  runAsUser: 13001
+  fsGroup: 13001
 
 service:
   main:
