--- a/charts/incubator/terraria-tshock/values.yaml
+++ b/charts/incubator/terraria-tshock/values.yaml
@@ -4,12 +4,12 @@ image:
   tag: vtshock@sha256:93dc07c1fbae51e58d02c678aa005b9c2820993255f2f4e4bee3565ebd26f23d
 
 terraria:
-  pass: "12345"
-  autocreate: "1"
-  seed: "AwesomeSeed"
-  worldname: "scale terraria"
+  pass: secretpass
+  autocreate: true
+  seed: AwesomeSeed
+  worldname: scale terraria
   maxplayers: 16
-  lang: "en-US"
+  lang: en-US
   easy_game_params:
     noupnp: true
     steam: false
