--- a/charts/incubator/terraria-tshock/values.yaml
+++ b/charts/incubator/terraria-tshock/values.yaml
@@ -5,7 +5,7 @@ image:
 
 terraria:
   pass: secretpass
-  autocreate: true
+  autocreate: "1"
   seed: AwesomeSeed
   worldname: scale terraria
   maxplayers: 16
