--- a/charts/incubator/terraria-tshock/questions.yaml
+++ b/charts/incubator/terraria-tshock/questions.yaml
@@ -153,7 +153,7 @@ questions:
                               default: 9014
                               required: true
         - variable: tcp
-          label: 'tcp service'
+          label: tcp service
           description: Container Port 7777
           schema:
             additional_attrs: true
