--- a/charts/incubator/youtrack/questions.yaml
+++ b/charts/incubator/youtrack/questions.yaml
@@ -110,7 +110,7 @@ questions:
                 label: "runAsNonRoot"
                 schema:
                   type: boolean
-                  default: false
+                  default: true
 # Include{podSecurityContextRoot}
         - variable: runAsUser
           label: "runAsUser"
