--- a/charts/incubator/jenkins/templates/common.yaml
+++ b/charts/incubator/jenkins/templates/common.yaml
@@ -1,2 +1,8 @@
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.common.loader.init" . }}
+
+{{/* Render secret */}}
+{{- include "jenkins.secret" . }}
+
 {{/* Render the templates */}}
-{{ include "tc.common.loader.all" . }}
+{{ include "tc.common.loader.apply" . }}
