--- a/charts/incubator/jenkins/values.yaml
+++ b/charts/incubator/jenkins/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: tccr.io/truecharts/jenkins
+  repository: jenkins/jenkins
   pullPolicy: IfNotPresent
-  tag: v2.362@sha256:6ead1a1da8711e3da9bbdbe95dc8c4cf72389a5c22ddaba13b94028fdbf5f425
+  tag: 2.384-jdk17@sha256:7b28e73870aad9d6f62be09772b2b9ff8599f7348ad4cc66a918511aac08bdc9
 
 podSecurityContext:
   runAsGroup: 0
@@ -12,22 +12,27 @@ securityContext:
   readOnlyRootFilesystem: false
   runAsNonRoot: false
 
-env:
-  JENKINS_JAVA_OPTS: ""
+jenkins:
+  java_opts: []
+  opts: []
+  plugins_force_upgrade: true
+  upgrade_if_no_marker: true
+
+envFrom:
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-secret'
 
 service:
   main:
     ports:
       main:
         port: 10280
-        targetPort: 8080
   agent:
     enabled: true
     ports:
       agent:
         enabled: true
         port: 50000
-        targetPort: 50000
 
 persistence:
   data:
