--- a/.github/workflows/common_tests.yaml
+++ b/.github/workflows/common_tests.yaml
@@ -33,15 +33,16 @@ jobs:
       - name: Gather changed charts
         id: list-changed
         run: |
-          changed=$(ct list-changed --config .github/ct-lint.yaml | grep -v "Skipping...")
+          changed=$(ct list-changed --config .github/ct-lint.yaml)
           if [[ -n "$changed" ]]; then
-            echo "changed=true" >> $env:GITHUB_OUTPUT
+            echo "changes_detected=true" >> $env:GITHUB_OUTPUT
             echo "changed_charts=$changed" >> $env:GITHUB_OUTPUT
           fi
+          echo "$changed"
 
       - name: Run chart-testing (lint)
         id: lint
-        if: steps.list-changed.outputs.changed == 'true'
+        if: steps.list-changed.outputs.changes_detected == 'true'
         run: ct lint --config .github/ct-lint.yaml --lint-conf .github/lintconf.yaml --charts {{ steps.list-changed.outputs.changed_charts }} --debug
 
   unittest:
@@ -95,9 +96,10 @@ jobs:
       run: |
         changed=$(ct list-changed --config .github/ct-install.yaml)
         if [[ -n "$changed" ]]; then
-          echo "changed=true" >> $env:GITHUB_OUTPUT
+          echo "changes_detected=true" >> $env:GITHUB_OUTPUT
           echo "changed_charts=$changed" >> $env:GITHUB_OUTPUT
         fi
+        echo "$changed"
 
     - name: Create k3d cluster
       if: needs.install.outputs.changed == 'true'
@@ -106,6 +108,6 @@ jobs:
         version: v1.25.4+k3s1
 
     - name: Run chart-testing (install)
-      if: needs.install.outputs.changed == 'true'
+      if: steps.list-changed.outputs.changes_detected == 'true'
       run: |
         ct install --config .github/ct-install.yaml --debug --charts {{ steps.list-changed.outputs.changed_charts }} --upgrade
