--- a/.github/workflows/common_tests.yaml
+++ b/.github/workflows/common_tests.yaml
@@ -38,12 +38,16 @@ jobs:
             echo "changes_detected=true" >> $env:GITHUB_OUTPUT
             echo "changed_charts=$changed" >> $env:GITHUB_OUTPUT
           fi
-          echo "$changed"
+          echo "Changed Charts: $changed"
 
       - name: Run chart-testing (lint)
         id: lint
         if: steps.list-changed.outputs.changes_detected == 'true'
-        run: ct lint --config .github/ct-lint.yaml --lint-conf .github/lintconf.yaml --charts {{ steps.list-changed.outputs.changed_charts }} --debug
+        run: |
+          ct lint --config .github/ct-lint.yaml \
+                  --lint-conf .github/lintconf.yaml \
+                  --charts {{ steps.list-changed.outputs.changed_charts }} \
+                  --debug
 
   unittest:
     needs:
@@ -51,63 +55,66 @@ jobs:
     name: Run unit tests
     runs-on: ubuntu-20.04
     steps:
-    - name: Checkout
-      uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
-      with:
-        fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
+        with:
+          fetch-depth: 0
 
-    - name: Install Helm
-      uses: azure/setup-helm@f382f75448129b3be48f8121b9857be18d815a82 # tag=v3
-      with:
-        version: v3.10.1
+      - name: Install Helm
+        uses: azure/setup-helm@f382f75448129b3be48f8121b9857be18d815a82 # tag=v3
+        with:
+          version: v3.10.1
 
-    - name: Run tests
-      run: |
-        helm plugin install https://github.com/quintush/helm-unittest --version v0.2.11
-        cd library/common-test/
-        helm dependency update
-        helm unittest --helm3 -f "tests/*/*.yaml" .
+      - name: Run tests
+        run: |
+          helm plugin install https://github.com/quintush/helm-unittest --version v0.2.11
+          cd library/common-test/
+          helm dependency update
+          helm unittest --helm3 -f "tests/*/*.yaml" .
 
   install:
     needs:
-    - lint
+      - lint
     name: Install charts
     runs-on: ubuntu-20.04
     steps:
-    - name: Checkout
-      uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
-      with:
-        fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
+        with:
+          fetch-depth: 0
 
-    - name: Install Helm
-      uses: azure/setup-helm@f382f75448129b3be48f8121b9857be18d815a82 # tag=v3
-      with:
-        version: v3.10.1
+      - name: Install Helm
+        uses: azure/setup-helm@f382f75448129b3be48f8121b9857be18d815a82 # tag=v3
+        with:
+          version: v3.10.1
 
-    - uses: actions/setup-python@2c3dd9e7e29afd70cc0950079bde6c979d1f69f9 # tag=v4
-      with:
-        python-version: 3.9
+      - uses: actions/setup-python@2c3dd9e7e29afd70cc0950079bde6c979d1f69f9 # tag=v4
+        with:
+          python-version: 3.9
 
-    - name: Set up chart-testing
-      uses: helm/chart-testing-action@afea100a513515fbd68b0e72a7bb0ae34cb62aec # tag=v2.3.1
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@afea100a513515fbd68b0e72a7bb0ae34cb62aec # tag=v2.3.1
 
-    - name: Gather changed charts
-      id: list-changed
-      run: |
-        changed=$(ct list-changed --config .github/ct-install.yaml)
-        if [[ -n "$changed" ]]; then
-          echo "changes_detected=true" >> $env:GITHUB_OUTPUT
-          echo "changed_charts=$changed" >> $env:GITHUB_OUTPUT
-        fi
-        echo "$changed"
+      - name: Gather changed charts
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --config .github/ct-install.yaml)
+          if [[ -n "$changed" ]]; then
+            echo "changes_detected=true" >> $env:GITHUB_OUTPUT
+            echo "changed_charts=$changed" >> $env:GITHUB_OUTPUT
+          fi
+          echo "Changed Charts: $changed"
 
-    - name: Create k3d cluster
-      if: needs.install.outputs.changed == 'true'
-      uses: nolar/setup-k3d-k3s@v1
-      with:
-        version: v1.25.4+k3s1
+      - name: Create k3d cluster
+        if: needs.install.outputs.changed == 'true'
+        uses: nolar/setup-k3d-k3s@v1
+        with:
+          version: v1.25.4+k3s1
 
-    - name: Run chart-testing (install)
-      if: steps.list-changed.outputs.changes_detected == 'true'
-      run: |
-        ct install --config .github/ct-install.yaml --debug --charts {{ steps.list-changed.outputs.changed_charts }} --upgrade
+      - name: Run chart-testing (install)
+        if: steps.list-changed.outputs.changes_detected == 'true'
+        run: |
+          ct install  --config .github/ct-install.yaml \
+                      --charts {{ steps.list-changed.outputs.changed_charts }} \
+                      --upgrade \
+                      --debug
