--- a/.github/workflows/common_tests.yaml
+++ b/.github/workflows/common_tests.yaml
@@ -44,9 +44,11 @@ jobs:
         id: lint
         if: ${{ steps.list-changed.outputs.changes_detected }} == 'true'
         run: |
+          echo "1. {{ steps.list-changed.outputs.changed_charts }}"
+          echo "2. ${{ steps.list-changed.outputs.changed_charts }}"
           ct lint --config .github/ct-lint.yaml \
                   --lint-conf .github/lintconf.yaml \
-                  --charts ${{ steps.list-changed.outputs.changed_charts }} \
+                  --charts "${{ steps.list-changed.outputs.changed_charts }}" \
                   --debug
 
   unittest:
